# twmap

./: .gitignore  Dockerfile  README.md  create_past_week_timelapses.sh  create_player_timelapses.sh  create_tribe_timelapses.sh  custom_timelapse.sh  ffmpeg_commands.sh  ffmpeg_commands_gpu_optimized.sh  player_files.txt  pyproject.toml  test.py  tribe_no_zoc_files.txt
.github/instructions/: twmap-project-context.instructions.md
data/: conquer_models.csv  player_models.csv  tribe_models.csv  village_models.csv
data/en144/: ally.txt  conquer.txt  player.txt  village.txt
data/en145/: ally.txt  conquer.txt  player.txt  village.txt
data/w144/: ally.txt  conquer.txt  player.txt  village.txt
twmap/: __init__.py  main.py  mapfactory.py  new_main.py  w144_main.py  w145_main.py  w146_main.py
twmap/api/: data.py  twapi.py
twmap/datamodel/: datafilter.py  dataloader.py  datamodel.py  model_loader.py
twmap/map/: colors.py  map.py  mapfactory.py
twmap/snapshot/: datafilter.py  dataloader.py  snapshot_datamodel.py
twmap/stats/: old_stats.py  stats.py
twmap/world/: world_datamodel.py  world_loader.py
