[tool.poetry]
name = "twmap"
version = "0.1.0"
description = ""
authors = ["Floris"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
pydantic = "^2.10.6"
pillow = "^11.1.0"
pandantic = "^1.0.0"
requests = "^2.32.3"
boto3 = "^1.36.15"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
