[project]
name = "twmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.13"
dependencies = [
    "boto3>=1.40.30",
    "pandantic>=1.0.1",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]
