[project]
name = "twmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "boto3>=1.40.30",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandantic>=1.0.1",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]
